# safeopt-cpp

./: .gitmodules  CMakeLists.txt  README.md  README_CPP.md
.github/: pull_request_template.md
examples/: basic_example.cpp  comprehensive_demo.cpp  visualization_example.cpp
include/safeopt/: gaussian_process_optimization.hpp  gp_stub.hpp  safe_opt.hpp  safe_opt_swarm.hpp  safeopt.hpp  swarm_optimization.hpp  utilities.hpp  visualization.hpp
safeopt/: gp_opt.py
src/: gaussian_process_optimization.cpp  safe_opt.cpp  safe_opt_swarm.cpp  swarm_optimization.cpp  utilities.cpp  visualization.cpp
tests/: test_3d_optimization.cpp  test_all.cpp  test_gaussian_process_optimization.cpp  test_gp_library.cpp  test_real_function_optimization.cpp  test_safe_opt.cpp  test_swarm_optimization.cpp  test_visualization.cpp
